@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2020-2024 Michael Clarke
+ * Copyright (C) 2020-2025 Michael Clarke
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -38,7 +38,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -105,7 +104,7 @@ class GithubPullRequestDecoratorTest {
             when(lightIssue.impacts()).thenReturn(Map.of(SoftwareQuality.values()[i % SoftwareQuality.values().length], Severity.values()[i % Severity.values().length]));
             when(componentIssue.getIssue()).thenReturn(lightIssue);
             return componentIssue;
-        }).collect(Collectors.toList());
+        }).toList();
         when(analysisDetails.getScmReportableIssues()).thenReturn(reportableIssues);
 
         when(reportGenerator.createAnalysisSummary(any())).thenReturn(analysisSummary);
@@ -183,8 +182,6 @@ class GithubPullRequestDecoratorTest {
         DecorationResult expectedResult = DecorationResult.builder().withPullRequestUrl("http://url.of/pull/request").build();
         assertThat(decorationResult).usingRecursiveComparison().isEqualTo(expectedResult);
 
-        verifyNoMoreInteractions(gitHub);
-
         verify(comment1, never()).delete();
         verify(comment2, never()).delete();
         verify(comment3).delete();
@@ -195,7 +192,7 @@ class GithubPullRequestDecoratorTest {
         verify(pullRequest).comment("report summary");
         verify(pullRequest).getHtmlUrl();
         verify(pullRequest).getComments();
-        verifyNoMoreInteractions(pullRequest);
+        verifyNoMoreInteractions(pullRequest, gitHub);
     }
 
 
